<resources>
    <string name="app_name">Wretches</string>

    <string name="main_crimes_text">Преступления</string>
    <string name="main_add_new_crime_text">Добавить преступление</string>
    <string name="main_settings_label_text">Настройки</string>
    <string name="main_no_crimes_text">Преступлений нет</string>

    <string name="new_crime_title_text">Новое преступление</string>
    <string name="new_crime_edit_text">Редактирование</string>
    <string name="new_crime_save_text">Сохранить</string>
    <string name="new_crime_title_label_text">Что случилось?</string>
    <string name="new_crime_description_label_text">Опишите поподробнее</string>
    <string name="new_crime_attach_photos_label_text">Фотографии с места преступления</string>
    <string name="new_crime_pick_photos_label_text">Выбрать из галлереи</string>
    <string name="new_crime_remove_photo_text">Удалить фотографию</string>
    <string name="new_crime_solved_label_text">Наглец, что это сделал, найден?</string>
    <string name="new_crime_field_must_not_be_empty_text">Поле должно быть заполнено</string>

    <string name="settings_title_text">Настройки</string>
    <string name="settings_theme_label_text">Тема</string>
    <string name="settings_theme_description_text">Цветовая палитра приложения</string>
    <string name="settings_theme_value_light_text">Светлая</string>
    <string name="settings_theme_value_dark_text">Тёмная</string>
    <string name="settings_theme_value_system_text">Как в системе</string>
    <string name="settings_backup_label_text">Резервная копия</string>
    <string name="settings_backup_description_text">Сделать локальную резервную копию всех данных приложения</string>
    <string name="settings_backup_successful_text">Все данные успешно выгружены</string>
    <string name="settings_backup_error_text">При выгрузке данных произошла ошибка</string>
    <string name="settings_backup_nothing_to_backup_text">Нет данных о преступлениях, которые следует выгрузить</string>
    <string name="settings_backup_permission_title_text">Нет разрешения</string>
    <string name="settings_backup_permission_description_text">Для того, чтобы сохранить копию данных о преступлениях, требуется разрешение на запись в память устройства</string>
    <string name="settings_backup_permission_ok_text">Ок</string>
    <string name="settings_restore_label_text">Восстановить</string>
    <string name="settings_restore_description_text">Восстановление всех данных из резервной копии</string>
    <string name="settings_restore_successful_text">Данные успешно восстановлены</string>
    <string name="settings_restore_error_text">Произошла ошибка при восстановлении данных из файла</string>
    <string name="settings_theme_update_error_text">Не удалось обновить тему</string>

    <string name="theme_picker_title_text">Тема</string>
    <string name="theme_picker_save_text">Сохранить</string>
    <string name="theme_picker_cancel_text">Отмена</string>

    <string name="photo_picker_no_permission_title_text">Нет разрешения</string>
    <string name="photo_picker_no_permission_description_text">Для того, чтобы отобразить фотографии, приложению требуется разрешение для чтения их из памяти устройства</string>
    <string name="photo_picker_ok_text">Ок</string>
</resources>